syntax = "proto3";

package com.sample;

message FindByIDRequest {
  int64 id = 1;
}

message FindByIDResponse {
  int64 id = 1;
  string name = 2;
  string surname = 3;
  string sex = 4;
  int32 age = 5;
  string passport_series = 6;
  string passport_number = 7;
}

service UserService {
  rpc findById(FindByIDRequest) returns (FindByIDResponse);
}